// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withLayout is rendered correctly 1`] = `
<div
  style={
    Object {
      "zIndex": -1,
    }
  }
>
  <WithStyles(Connect(Header)) />
  <section
    id="content"
    style={
      Object {
        "marginTop": 50,
        "padding": "30px 15px",
      }
    }
  >
    <Component />
  </section>
</div>
`;

exports[`withLayout is rendered correctly 2`] = `
<div
  style={
    Object {
      "zIndex": -1,
    }
  }
>
  <WithStyles(Connect(Header)) />
  <section
    id="content"
    style={
      Object {
        "marginTop": 50,
        "padding": "0",
      }
    }
  >
    <Component />
  </section>
  <WithStyles(Footer) />
</div>
`;
